@@ -1,3 +1,10 @@
+2001-12-25  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* make/lilypond-vars.make: 
+	* scripts/ly2dvi.py (setup_environment): 
+	* scripts/lilypond-book.py (setup_environment): Also set tex
+	memory options.
+
 2001-12-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* VERSION: 1.5.27 released.
